apps/victoria-metrics/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
  name: victoria-metrics

  # TODO: For Talos, we need this label.
  # https://docs.siderolabs.com/kubernetes-guides/security/pod-security#override-the-pod-security-admission-configuration
  labels:
    pod-security.kubernetes.io/enforce: privileged
